--- a/.gitconfig
+++ b/.gitconfig
@@ -3,9 +3,10 @@
 	spellcheck = false
 	icontheme = dark
 	theme = flat-dark-red
+
 [user]
 	name = Sotiris Dimitrakopoulos
-	email = sotirios.dimitrakopoulos@bkw.ch
+	email = dimisotiris@yahoo.com
 
 [core]
     pager = delta
@@ -17,14 +18,12 @@
 [delta]
     navigate = true    # use n and N to move between diff sections
     side-by-side = true
-    # delta detects terminal colors automatically; set one of these to disable auto-detection
-    # dark = true
-    # light = true
 
 [merge]
     conflictstyle = diff3
 
 [diff]
     colorMoved = default
+
 [push]
 	autoSetupRemote = true
