--- a/.gitconfig
+++ b/.gitconfig
@@ -24,6 +24,13 @@
 
 [diff]
     colorMoved = default
+    ; external = difft
 
 [push]
 	autoSetupRemote = true
+
+[alias]
+    # Difftastic aliases, so `git dlog` is `git log` with difftastic and so on.
+    dlog = -c diff.external=difft log --ext-diff
+    dshow = -c diff.external=difft show --ext-diff
+    ddiff = -c diff.external=difft diff
