feat: persist locally the update of playerctl

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ bind-key C-a send-prefix
 # Switch panes with | - 
 unbind %
 unbind r
-unbind o # For sessionx
+# unbind o # For sessionx
 unbind '"'
 unbind f
 unbind p
